<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="hello">Choose one of the features below.</string>

	<string name="app_name">mTutor</string>
	<string name="description_logo">mTutor Application</string>

	<string name="description_about">About</string>
	<string name="description_home">Home</string>
	<string name="description_search">Search</string>
	<string name="description_feature1">Feature 1</string>
	<string name="description_feature2">Feature 2</string>
	<string name="description_feature3">Feature 3</string>
	<string name="description_feature4">Feature 4</string>
	<string name="description_feature5">Feature 5</string>
	<string name="description_feature6">Feature 6</string>

	<string name="title_about">About</string>
	<string name="title_home">Home</string>
	<string name="title_search">Search</string>
	<string name="title_feature1">Search</string>
	<string name="title_feature2">Saved Searches</string>
	<string name="title_feature3">Watch List</string>
	<string name="title_feature4">Events</string>
	<string name="title_feature5">My mTutor</string>
	<string name="title_feature6">Settings</string>
	<string name="title_edit_profile">Edit Profile</string>
	<string name="connections">Connections</string>
	<string name="title_item_description">Document Info</string>
	<string name="attachment_list">Attachments</string>
	<string name="attachment_info">Attachment</string>
	<string name="saved_search">Search Results</string>
	<string name="watchlist_settings">Reminders</string>
	<string name="recent_activity">Recent Activities</string>
	<string name="recent_view">Recent Views</string>
	<string name="my_connections">My Connections</string>
	<string name="add_connection">Add Connection</string>
	<string name="user_profile">View Profile</string>
	<string name="feedback">Feedback</string>
	<string name="recomendation">Recommendations</string>
	<string name="con_req">Requests</string>
	<string name="att_info">Attachment Information</string>

	<string name="default_intro">This is the default content view for an activity.
		Be sure to change your activity\'s onCreate method. Use setContentView
		on a custom layout.</string>
	<string name="feature1_intro">Feature 1 content goes here.</string>
	<string name="feature2_intro">Feature 2 content goes here.</string>
	<string name="feature3_intro">Feature 3 content goes here.</string>
	<string name="feature4_intro">Feature 4 content goes here.</string>
	<string name="feature5_intro">Feature 5 content goes here.</string>
	<string name="feature6_intro">Feature 6 content goes here.</string>

	<string name="about_intro">This app is a demo to show you how to do an Android
		app based on the Dashboard pattern that has been used in apps like
		Twitter, Google IO, and Evernote.</string>
	<string name="search_intro">Content for the Search page goes here.</string>
	<string name="test">A book is a set of written, printed, illustrated,
		or blank sheets, made of ink, paper, parchment, or other materials,
		usually fastened together to hinge at one side. A single sheet within
		a book is called a leaf, and each side of a leaf is called a page. A
		book produced in electronic format is known as an electronic book
		(e-book).

</string>
	<string name="text_description">Are you looking for a deeper understanding of the
		Java™ programming language so that you can write code that is clearer,
		more correct, more robust, and more reusable? Look no further!
		Effective Java™, Second Edition, brings together seventy-eight
		indispensable programmer’s rules of thumb: working, best-practice
		solutions for the programming challenges you encounter every day.

		This
		highly anticipated new edition of the classic, Jolt Award-winning
		work
		has been thoroughly updated to cover Java SE 5 and Java SE 6
		features
		introduced since the first edition. Bloch explores new design
		patterns
		and language idioms, showing you how to make the most of
		features
		ranging from generics to enums, annotations to autoboxing.

		Each chapter
		in the book consists of several “items” presented in the
		form of a
		short, standalone essay that provides specific advice,
		insight into
		Java platform subtleties, and outstanding code examples.
		The
		comprehensive descriptions and explanations for each item
		illuminate
		what to do, what not to do, and why.
</string>

</resources>
