<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/gradient_bg">
	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home" android:src="@drawable/title_home"
			android:onClick="onClickHome" />

		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_about" android:src="@drawable/title_about"
			android:onClick="onClickAbout" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_search" android:src="@drawable/title_search"
			android:onClick="onClickSearch" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="5dip"
		android:orientation="vertical" android:background="@drawable/rounded_corner_bg">
		<TextView android:text="Prageeth Nuwan Gangabada"
			android:layout_width="match_parent" android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:textColor="@color/gray_dark"
			android:padding="5dip" android:singleLine="true" android:id="@+id/txtName" />
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@drawable/rounded_corner_transparent"
		android:orientation="horizontal" android:padding="5dip"
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		android:layout_marginBottom="5dip">

		<!-- ListRow Left sied Thumbnail image -->
		<LinearLayout android:id="@+id/thumbnail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:padding="3dip" android:layout_alignParentLeft="true"
			android:background="@drawable/rounded_corner_bg" android:layout_marginRight="5dip">

			<ImageView android:layout_width="80dip" android:layout_margin="3dip"
				android:layout_height="80dip" android:src="@drawable/default_user" android:id="@+id/imgProfPic" />

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_margin="5dip"
			android:orientation="vertical" android:layout_toRightOf="@+id/thumbnail">
			<TextView android:text="Undergraduate of Faculty of Information Technology" android:textSize="14sp"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:textColor="@color/gray_dark" android:padding="5dip"
				android:id="@+id/txtPosition" />
			<TextView android:text="University of Moratuwa" android:textSize="14sp"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:textColor="@color/gray_dark" android:padding="5dip"
				android:singleLine="true" android:id="@+id/txtWorkPlace" />
		</LinearLayout>

	</RelativeLayout>
	<View android:id="@+id/divider" android:background="@color/title_background"
		android:layout_width="fill_parent" android:layout_height="1dp" 
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"/>
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5dip"
		android:layout_weight="1" android:padding="6dip" android:background="@drawable/rounded_corner_transparent">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" >
			<Button android:drawableTop="@drawable/utilities_search"
				android:text="@string/title_feature1" style="@style/HomeButton"
				android:id="@+id/home_btn_feature1" android:onClick="onClickFeature"></Button>
			<Button android:id="@+id/home_btn_feature2" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature2"
				android:drawableTop="@drawable/utilities_saved" />
		</LinearLayout>
		<View android:id="@+id/divider" android:background="@drawable/black_white_gradient"
			android:layout_width="fill_parent" android:layout_height="1dp" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_feature3" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature3"
				android:drawableTop="@drawable/utilities_reminders" />
			<Button android:id="@+id/home_btn_feature4" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature4"
				android:drawableTop="@drawable/utilities_events" />
		</LinearLayout>
		<View android:id="@+id/divider" android:background="@drawable/black_white_gradient"
			android:layout_width="fill_parent" android:layout_height="1dp" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" >
			<Button android:id="@+id/home_btn_feature5" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature5"
				android:drawableTop="@drawable/utilities_user" />
			<Button android:id="@+id/home_btn_feature6" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature6"
				android:drawableTop="@drawable/utilities_settings" />
		</LinearLayout>

	</LinearLayout>
</LinearLayout>
