<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:background="@drawable/gradient_bg">
		<LinearLayout style="@style/TitleBar">
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_home" android:src="@drawable/title_home"
				android:onClick="onClickHome" />

			<ImageView style="@style/TitleBarSeparator" />
			<TextView style="@style/TitleBarText" android:text="Attachment Infomation"/>
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_about" android:src="@drawable/title_about"
				android:onClick="onClickAbout" />
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_search" android:src="@drawable/title_search"
				android:onClick="onClickSearch" />
		</LinearLayout>

<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="0dip"
			android:layout_weight="1" />
 
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="0"  />
	</LinearLayout>
</TabHost> 
</LinearLayout>