<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">
  
    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout1">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="100">
            <TableLayout  android:id="@+id/tableLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="80">
               
                <TableRow android:paddingTop="10dp" android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
               <TextView android:id="@+id/txtName" android:textSize="20dp" android:textStyle="bold"
				android:textColor="#000000" android:text="Prageeth Gangabada"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingLeft="10dp"/>
                </TableRow>
                <TableRow android:paddingTop="10dp" android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
               <TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:id="@+id/txtEmail" android:textColor="#000000"
				android:text="User ID : 2012" android:paddingLeft="10dp"/>
                </TableRow>
                <TableRow android:paddingTop="5dp" android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
             	<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="Username : prageethkandy" android:textColor="#000000" android:paddingLeft="10dp"/>
                </TableRow>
               
            </TableLayout>
            <TableLayout  android:id="@+id/tableLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="20">
                <TableRow  android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
                  <ImageView  android:paddingLeft="20dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/me" android:id="@+id/imageView1"></ImageView>
                </TableRow>
               
            </TableLayout>
        </TableRow>
    </TableLayout>
  <View android:id="@+id/divider"
    android:background="@drawable/black_white_gradient"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
     />
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1" android:padding="6dip">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:drawableTop="@drawable/utilities_search" android:text="@string/title_feature1" style="@style/HomeButton" android:id="@+id/home_btn_feature1" android:onClick="onClickFeature"></Button>
			<Button android:id="@+id/home_btn_feature2" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature2"
				android:drawableTop="@drawable/utilities_saved" />
		</LinearLayout>
<View android:id="@+id/divider"
    android:background="@drawable/black_white_gradient"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
     />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_feature3" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature3"
				android:drawableTop="@drawable/utilities_reminders" />
			<Button android:id="@+id/home_btn_feature4" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature4"
				android:drawableTop="@drawable/utilities_events" />
		</LinearLayout>
<View android:id="@+id/divider"
    android:background="@drawable/black_white_gradient"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
     />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_feature5" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature5"
				android:drawableTop="@drawable/utilities_user" />
			<Button android:id="@+id/home_btn_feature6" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_feature6"
				android:drawableTop="@drawable/utilities_settings" />
		</LinearLayout>

	</LinearLayout>
  
    
    
</LinearLayout>
