<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" 
            
            />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
            
            
    </LinearLayout>
    
<LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical" 
        android:background="@drawable/gradient_bg" >
          <TextView
          android:layout_margin="10dip"
         android:paddingLeft="10dip"
        android:id="@+id/txtResultCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 new updates this week"
        android:layout_marginRight="5dip"
        android:textSize="15dip"
        android:textColor="@color/gray"
        />
        <View android:id="@+id/divider"
    android:background="@color/gray"
    android:layout_width="fill_parent"
    android:layout_height="0.5dp"
    android:longClickable="true"
     />
    
</LinearLayout>


<View android:id="@+id/divider"
    android:background="@color/title_background"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:longClickable="true"
     />
     
        <ListView 
	 	android:layout_height="wrap_content"
	 	android:layout_width="fill_parent" android:id="@+id/lvRecentActivity"/>
</LinearLayout>
