<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selecter_image"
    android:orientation="horizontal"
    android:padding="5dip" >
 
   
 
         
  <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notify me"
        android:layout_marginRight="5dip"
        android:textSize="14dip"
        android:textColor="@color/gray"
        />
          
  <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/text1"
        android:gravity="right"
        android:text="Tap and hold to delete"
        android:layout_marginRight="5dip"
        android:textSize="14dip"
        android:textColor="@color/gray"
        />
   
 
</RelativeLayout>
<View android:id="@+id/divider"
    android:background="@color/title_background"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:longClickable="true"
     />
     
     <ListView 
	 	android:layout_height="wrap_content"
	 	android:layout_width="fill_parent" android:id="@+id/lvSavedSearch"/>
</LinearLayout>
